Enhanced UI and operation modification

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       <video id="localVideo" autoplay muted></video>
     </div>
     <div class="video-container">
-      <video id="remoteVideo" autoplay muted></video>
+      <video id="remoteVideo" autoplay></video>
     </div>
     <div class="controls">
       <div id="notify">
